Issue #3: Changed to a jlink-based approach for the macOS distribution resulting in much smaller size.